--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -1,5 +1,8 @@
-﻿@page
+﻿
+@page
+@using IAmFara.Core.DynamicAddin.Abstractions
 @model IndexModel
+@inject IEnumerable<IFeatureAddin> Addins
 @{
     ViewData["Title"] = "Home page";
 }
@@ -8,3 +11,12 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<ul>
+    @foreach (var item in Addins)
+    {
+        <li>
+            @item.Name
+        </li>
+    }
+</ul>
