--- a/Core/Pages/_ViewImports.cshtml
+++ b/Core/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using IAmFara.Web
-@namespace IAmFara.Web.Pages
+﻿@using IAmFara.Core
+@namespace IAmFara.Core.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
