--- a/SharedViews/Pages/_ViewImports.cshtml
+++ b/SharedViews/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using IAmFara.Core
-@namespace IAmFara.Core.Pages
+@namespace IAmFara.Pages.SharedViews
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
