Re-arranged * IPlugin * IFeature * IPage * INavBarItem * BasePlugin * BaseFeature

--- a/src/Samples/SharedViews/Pages/Shared/_NavBar.cshtml
+++ b/src/Samples/SharedViews/Pages/Shared/_NavBar.cshtml
@@ -1,6 +1,6 @@
 ﻿
-@using IAmFara.Core.DynamicAddin.Abstractions
-@inject IEnumerable<IFeatureAddin> Addins
+@using IAmFara.Core.Dynamic.Abstractions
+@inject IEnumerable<INavBarItem> NavBarItems
 
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
@@ -12,11 +12,28 @@
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
 
-                @foreach (var addin in Addins)
+                @foreach (var item in NavBarItems)
                 {
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page=@addin.Route >@addin.Name</a>
-                    </li>
+                    if (item.Pages.Length == 1)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page=@item.Pages[0].Route>@item.Pages[0].Name</a>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                @item.Name
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                @foreach (var p in item.Pages)
+                                {
+                                    <a class="dropdown-item" asp-area="" asp-page=@p.Route>@p.Name</a>
+                                }
+                            </div>
+                        </li>
+                    }
                 }
             </ul>
         </div>
