--- a/src/Main/Bootstrap4/Pages/Shared/_Carousel.cshtml
+++ b/src/Main/Bootstrap4/Pages/Shared/_Carousel.cshtml
@@ -1,5 +1,9 @@
 ﻿@using IAmFara.SharedViews.Models.Shared
-@model IEnumerable<CarouselDataModel>
+@using IAmFara.Core.Dynamic
+@model IEnumerable<ExchangedData>
+@{
+    var ConvertedModel = Model.CastExchangedData<CarouselDataModel>();
+}
 
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -8,16 +12,16 @@
         <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
-        @for (int i = 0; i < Model.Count(); i++)
+        @for (int i = 0; i < ConvertedModel.Count(); i++)
         {
             string active = string.Empty;
             if (i == 0) active = "active";
 
-            <div class="carousel-item active">
-                <img src="~/@Model.ElementAt(i).Image" class="d-block w-100" alt="...">
+            <div class="carousel-item @active">
+                <img src="~/@ConvertedModel.ElementAt(i).Image" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>@Model.ElementAt(i).Title</h5>
-                    <p>@Model.ElementAt(i).Body</p>
+                    <h5>@ConvertedModel.ElementAt(i).Title</h5>
+                    <p>@ConvertedModel.ElementAt(i).Summary</p>
                 </div>
             </div>
         }
