--- a/src/Main/Bootstrap4/Pages/_ViewImports.cshtml
+++ b/src/Main/Bootstrap4/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IAmFara.Core
 @namespace IAmFara.Bootstrap4
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, IAmFara.Bootstrap4
