--- a/src/Samples/AnotherTest/Pages/_ViewImports.cshtml
+++ b/src/Samples/AnotherTest/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IAmFara.Core
 @namespace IAmFara.AnotherTest.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, IAmFara.Bootstrap4
