--- a/src/Samples/AnotherTest/Pages/Index.cshtml
+++ b/src/Samples/AnotherTest/Pages/Index.cshtml
@@ -4,5 +4,6 @@
 }
 
 <div>
+    <vc:alert model=@Model.CarouselDataModels.First() ></vc:alert>
     <vc:carousel slides=@Model.CarouselDataModels></vc:carousel>
 </div>
