--- a/Frontend/src/Components/NavBar/NavBar.css
+++ b/Frontend/src/Components/NavBar/NavBar.css
@@ -1,68 +1,83 @@
-.navbar {
-    display: flex;
-    border-bottom: rgb(73, 73, 73);
-    border-bottom: solid;
-}
-
-.icon {
-    display: inline-block;
-    width: 15%
-}
-
 .face-icon {
-    width: 5rem;
     height: 5rem;
+    width: 5rem;
     border-radius: 50%;
 }
 
 .icon-txt {
     font-family:cursive;
     font-weight:bolder;
-    display: inline-block;
+    font-size: small;
+    margin-left: -30px;;
 }
 
-.nav-list {
-    display: flex;
-    width: 70%;
-    justify-content: right;
-}
-
-.nav-list ul {
-    list-style:none;
-    display: flex;
-    padding:0;
-    margin:0;
-    height: 50%;
-    align-self: center;
+.app-nav-list {
     font-weight: bold;
     font-family:Arial, Helvetica, sans-serif;
-    font-size: larger;
 }
 
-.nav-item {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    padding-right: 2rem;
+.app-nav-item {
     border-right: black;
     border-width: 2px;
     border: none;
     border-right: solid;
-    align-self: center;
 }
 
-.nav-item a {
+.app-nav-item a {
     text-decoration: none;
     color: gray;
 }
 
-.nav-item a:hover {
+.app-nav-item a:hover {
     color: black;
 }
 
-.nav-item.active a {
+.app-nav-item.active a {
     color: black;
 }
 
-.nav-item.last {
+.app-nav-item.last {
     border-right: none;
+}
+
+@media screen and (min-width: 1300px) {
+    .app-nav-list {
+        font-weight: bold;
+        font-family:Arial, Helvetica, sans-serif;
+        font-size: medium;
+    }
+
+    .app-nav-item {
+        margin-left: 0.5rem;
+        margin-right: 0.5rem;
+        padding-right: 1rem;
+    }
+}
+
+@media screen and (max-width: 1299px) {
+    .app-nav-list {
+        font-weight: bold;
+        font-family:Arial, Helvetica, sans-serif;
+        font-size: small;
+    }
+
+    .app-nav-item {
+        border-right: black;
+        border-width: 1px;
+        border: none;
+        border-right: solid;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .face-icon {
+        height: 3rem;
+        width: 3rem;
+    }
+    
+    .icon-txt {
+        font-weight:bold;
+        font-size: xx-small;
+        margin-left: -25px;;
+    }
 }
